# textdir plugin
libdir = @VUURMUUR_PLUGIN_DIR@
noinst_LTLIBRARIES = libtextdir.la
AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src
libtextdir_la_SOURCES = textdir_plugin.c textdir_ask.c textdir_tell.c textdir_list.c
noinst_HEADERS = textdir_plugin.h textdir.h
EXTRA_DIST = textdir.conf textdir.conf.debian

